@@ -33,7 +33,7 @@ bool UnLockCommand::Execute()
 		{
 			CSVNProgressDlg progDlg;
 			progDlg.SetCommand(CSVNProgressDlg::SVNProgress_Unlock);
-			progDlg.SetOptions(parser.HasKey(_T("force")) ? ProgOptLockForce : ProgOptNone);
+			progDlg.SetOptions(parser.HasKey(_T("force")) ? ProgOptForce : ProgOptNone);
 			progDlg.SetPathList(unlockDlg.m_pathList);
 			if (parser.HasVal(_T("closeonend")))
 				progDlg.SetAutoClose(parser.GetLongVal(_T("closeonend")));
