@@ -42,7 +42,7 @@ typedef enum
 	ProgOptIgnoreExternals = 0x08,
 	ProgOptKeeplocks = 0x10,
 	/// for locking this means steal the lock, for unlocking it means breaking the lock
-	ProgOptLockForce = 0x20,
+	ProgOptForce = 0x20,
 	ProgOptSwitchAfterCopy = 0x40,
 	ProgOptIncludeIgnored = 0x80,
 	ProgOptIgnoreAncestry = 0x100,
